versao dois s Please enter the commit message for your changes. Lines starting

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,23 +12,20 @@ body {
     font-size: x-large;
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left: 25%;
 }
 
 #LetraBrancaSubTitulo {
     font-size: small;
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left: 10%;
-    float: right;
+    margin-top: 5mm;
 }
 
 #LetraBrancaMenu {
     font-size: small;
     color: rgb(255, 255, 255);
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left: 10%;
-    float: left;
+    margin-top: 5mm;
 }
 
 #LetraBrancaCorpo {
@@ -52,7 +49,6 @@ body {
     color: rgb(45, 62, 80);
     font-size: small;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin-left: 30%;
     margin-top: 10%;
     
 }
@@ -62,8 +58,6 @@ body {
     border-bottom: solid rgb(196, 196, 196) ;
     font-size: 14px;
     padding: 18px;
-    margin-left: 25%;
-    margin-right: 25%;
     margin-bottom: 5px;
 }
 
@@ -77,14 +71,9 @@ body {
 #BtnConsultar{
     background-color: rgb(27, 188, 155);
     font-size: 12px;
-    padding: 5px 5px;
-    border-radius: 8px;
-    margin-left: 25%;
-    margin-right: 60%;
-    margin-top: 0px;
-    
+    width: 20mm;
+    height: 10mm;
+    border-radius: 8px; 
+    margin-top: 2mm;
 }
 
-#imagem{
-    margin-left: 35%;
-}
